--- a/.gitattributes
+++ b/.gitattributes
@@ -21,5 +21,4 @@
 *.svg filter=lfs diff=lfs merge=lfs -text
 *.tif filter=lfs diff=lfs merge=lfs -text
 *.tiff filter=lfs diff=lfs merge=lfs -text
-
-
+*imites_departamentales.js filter=lfs diff=lfs merge=lfs -text
